--- a/cw-react/package.json
+++ b/cw-react/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "cerulean-whisper-react-part",
+  "name": "cw-react",
   "version": "0.0.1",
   "private": true,
-  "homepage": "./",
+  "build_homepage": "./",
+  "homepage": "https://mzhukov1973.github.io/CeruleanWhisper-Pub",
+  "author": "Maxim Zhukov <mzhukov31415dev@gmail.com>",
+  "license": "Apache-2.0",
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
-    "autoprefixer": "^7.1.2",
+    "autoprefixer": "^7.1.4",
     "babel-runtime": "^6.25.0",
     "browserslist": "^2.3.1",
     "caniuse-lite": "^1.0.30000715",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.7",
     "elemental": "^0.6.1",
+    "gh-pages": "^1.0.0",
     "list": "^1.0.0",
     "material-ui": "^0.18.7",
-    "material-ui-icons": "^1.0.0-alpha.19",
+    "material-ui-icons": "^1.0.0-beta.10",
     "mui-icons": "^1.2.1",
     "node-sass": "^4.5.3",
-    "npm": "^5.3.0",
     "postcss": "^6.0.8",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules-extract-imports": "^1.2.0",
     "raw-loader": "^0.5.1",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-bootstrap": "^0.31.2",
+    "react": "^15.6.2",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^0.31.3",
     "react-css-themr": "^2.1.2",
+    "react-dom": "^15.6.2",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
     "react-tap-event-plugin": "^2.0.1",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^2.7.0",
+    "webpack": "^3.6.0",
     "which": "^1.3.0"
   },
   "devDependencies": {
@@ -44,6 +49,8 @@
     "redux-devtools": "^3.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
